[tool.poetry]
name = "freeconf"
version = "0.1.0"
description = ""
authors = ["Douglas Hubler <douglas@hubler.us>"]

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.44.0"
google-api-python-client = "^2.39.0"
setuptools = "^73.0.1"

[tool.poetry.dev-dependencies]
grpcio-tools = "^1.44.0"
requests = "^2.27.1"

[tool.poetry.scripts]
fc-lang-install = "freeconf.install:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
